--- a/css/index.css
+++ b/css/index.css
@@ -73,8 +73,10 @@ h4 {
      "ma pr pr"
      "rt rt rt"
      "mr mr mr"
+     "deal deal deal"
      ;
     grid-gap: 0.2em;
+    position: relative;
 }
 .image {grid-area: pic;}
 .favorite {
@@ -124,6 +126,19 @@ h4 {
 }
 .p-rating {grid-area: rt;}
 .p-rating i {font-size:1em;}
+.p-deal {grid-area: deal;
+}
+.callout {
+    display: inline-block;
+    padding: 0em 0.5em;
+    border-radius: 1em;
+    background-color: grey;
+    color: white;
+    position: absolute;
+    top: 0.5em;
+    left: 0.5em;
+  }
+.urgent {background-color: crimson;}
 .product a {
     padding: 0.2em;
     background-color: var(--h1);
